Better looking simple website

--- a/permasite/templates/base.html
+++ b/permasite/templates/base.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         {% block content %}
+
         {% endblock %}
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -18,3 +19,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
