--- a/permasite/templates/home.html
+++ b/permasite/templates/home.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     {% include 'navbar.html' %}
-    {% include 'searchbar.html' %}
+    <h1>Permasort</h1>
+    <p>This is a simple home page created using Bootstrap.</p>
 {% endblock %}
