--- a/permasite/templates/navbar.html
+++ b/permasite/templates/navbar.html
@@ -1,23 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Your Brand</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light container-fluid">
+    <a class="navbar-brand" href="{% url 'home' %}">Permasort</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="{% url 'search' %}">Search</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-            <form class="d-flex" method="POST">
-                {% csrf_token %}
-                <input class="form-control search-bar" type="search" name="searched_vegetable" placeholder="Cherchez un légume" aria-label="Search">
-                <button class="btn search-button" type="submit">Search</button>
-            </form>
+        </ul>
     </div>
 </nav>
