--- a/permasite/templates/result.html
+++ b/permasite/templates/result.html
@@ -3,18 +3,47 @@
 {% block title %}Results{% endblock %}
 
 {% block content %}
-    <div class="text-center mt-5">
-        <h2>Results</h2>
-        {% if results %}
-            <div class="list-group">
-                {% for result in results %}
-                    <h3 class="list-group-item">{{ result.name }}</h3>
-                {% endfor %}
+{% include 'search.html' %}
+
+    <div class="container mt-5">
+        {% if searched_vegetable_name %}
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">Results for {{ searched_vegetable_name }}</h3>
             </div>
-        {% else %}
-            <div class="alert alert-warning" role="alert">
-                <h3>Hey! You Forgot To Search For A Vegetable...</h3>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Good Associations:</h4>
+                        <ul class="list-group">
+                            {% for pairs in good_pairs %}
+                                <ul class="list-group">
+                                {% for vegetable in pairs %}
+                                    {% if vegetable != searched_vegetable_name %}
+                                        <li class="list-group-item">{{ vegetable }}</li>
+                                    {% endif %}
+                                {% endfor %}
+                                </ul>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h4>Bad Associations:</h4>
+                        {% for pairs in bad_pairs %}
+                        <ul class="list-group">
+                        {% for vegetable in pairs %}
+                            {% if vegetable != searched_vegetable_name %}
+                                <li class="list-group-item">{{ vegetable }}</li>
+                            {% endif %}
+                        {% endfor %}
+                        </ul>
+                    {% endfor %}
+                    </div>
+                </div>
             </div>
+        </div>
         {% endif %}
+        <!-- Affichage des messages d'erreur ou de succès -->
+
     </div>
 {% endblock %}
